Minor fixes and updates

--- a/templates/app.html
+++ b/templates/app.html
@@ -176,8 +176,11 @@
                     <li><a href="https://int-brain-lab.github.io/iblenv/notebooks_external/loading_trials_data.html">Example
                             to load trials data and plot a psychometric curve</a></li>
                     <li><a
-                            href=" https://int-brain-lab.github.io/iblenv/notebooks_external/loading_spikesorting_data.html">Example
+                            href="https://int-brain-lab.github.io/iblenv/notebooks_external/loading_spikesorting_data.html">Example
                             to load spike sorting data and plot a raster</a></li>
+
+                    <li><a href="https://int-brain-lab.github.io/iblenv/notebooks_external/loading_ephys_data.html">Example
+                            to load LFP data and compute the power spectrum</a></li>
                 </ul>
             </details>
         </figure>
@@ -210,7 +213,7 @@
                         experiment time (s) ; the vertical dashed lines indicate the 3 times points at which the raw
                         data snippets (right-plots) are taken.</li>
                     <li>3 raw electrophysiology data snippets of 50 millisecond (ms) duration are shown (one at T=600s,
-                        1800s, and 3000s). The raw data recorded on each channel is plotted as a grey code, and ordered
+                        1800s, and 3000s). The raw data recorded on each channel is plotted as a gray code, and ordered
                         along the probe depth. Divergence from the gray color (black or white) indicates a shift from
                         baseline activity. Overlaid dots indicate when spikes were detected (green: good units, red:
                         multi-units)</li>
