--- a/templates/index.html
+++ b/templates/index.html
@@ -80,11 +80,12 @@
         <h3>How much data do we have ?</h3>
 
         <p>
-            We recorded <strong>304740 neurons</strong>
-            in <strong>128 mice</strong> performing the task,
-            by doing <strong>584 insertions</strong> with Neuropixels probes.
+            We recorded <strong>293151 neurons</strong>
+            (out of which <strong>32784</strong> are considered to be neurons)
+            in <strong>115 mice</strong> performing the task,
+            by doing <strong>547 insertions</strong> with Neuropixels probes.
 
-            These neurons are distributed across <strong>272 brain regions</strong>
+            These neurons are distributed across <strong>194 brain regions</strong>
             spanning one brain hemisphere.
         </p>
 
