Add download button on front page

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -9,4 +9,15 @@
 </div>
 {%- endmacro %}
 
+{% macro download() -%}
+<!-- BUTTON DOWNLOAD -->
+<div class="row">
+    <div class="twelve columns">
+        <a class="button button-secondary button-download"
+            href="https://int-brain-lab.github.io/iblenv/notebooks_external/data_release_brainwidemap.html">download the
+            data</a>
+    </div>
+</div>
+{%- endmacro %}
+
 <!-- END MACROS -->
