--- a/static/styles.css
+++ b/static/styles.css
@@ -304,6 +304,16 @@ body .row figure details div {
     padding: 5px;
 }
 
+.button.button-secondary {
+    background-color: #d2998e;
+    color: white;
+    width: 100%;
+    font-size: 14pt;
+    font-weight: 600;
+    height: auto;
+    padding: 5px;
+}
+
 
 
 .buttonNav {
