--- a/templates/app.html
+++ b/templates/app.html
@@ -164,8 +164,8 @@
                 <p>BOTTOM PLOTS:</p>
                 <ul>
                     <li>Psychometric curves computed in different types of trial block ; for a trial block type, the
-                        probability of the visual stimulus being on the left is either 0.5 (black), 0.2 (orange), or 0.8
-                        (blue)</li>
+                        probability of the visual stimulus being on the right is either 0.5 (black), 0.2 (blue), or 0.8
+                        (orange)</li>
                     <li>Reaction time (s) curves computed in different trial blocks (same color scheme as the
                         psychometric curve plots)</li>
                     <li>Reaction time (s) for each trial, plotted throughout the whole experiment</li>
