--- a/templates/app.html
+++ b/templates/app.html
@@ -149,7 +149,7 @@
                 <summary>Figure 1: click to read the legend</summary>
 
                 <p>From top to bottom, left to right :</p>
-                <p>TOP PLOTS:</p>
+                <p><strong>Top:</strong></p>
                 <ul>
                     <li>Amplitude (uV) of units along the probe depth (um), colored by the quality: good units in green,
                         multi-units (mua) in red</li>
@@ -161,7 +161,7 @@
                     <li>Brain region acronyms along the probe depth (um)</li>
                 </ul>
 
-                <p>BOTTOM PLOTS:</p>
+                <p><strong>Bottom:</strong></p>
                 <ul>
                     <li>Psychometric curves computed in different types of trial block ; for a trial block type, the
                         probability of the visual stimulus being on the right is either 0.5 (black), 0.2 (blue), or 0.8
@@ -380,7 +380,7 @@
                 <summary>Figure 5: click to read the legend</summary>
 
                 <p>From top to bottom, left to right :</p>
-                <p>TOP PLOTS:</p>
+                <p><strong>Top:</strong></p>
                 <ul>
                     <li>Amplitude (uV) of good units along the probe depth (um), colored by the brain region color ; the
                         selected unit for visualization is highlighted in black</li>
@@ -405,7 +405,7 @@
                         presented for the electrode channels where spikes were detected. The electrode channels layout
                         over the whole probe is presented on the right.</li>
                 </ul>
-                <p>BOTTOM PLOTS:</p>
+                <p><strong>Bottom:</strong></p>
                 <ul>
                     <li>Autocorrelogram of the selected good unit.</li>
                     <li>Inter-spike-interval (ISI) distribution (normalized count) for the selected good unit.</li>
