--- a/static/styles.css
+++ b/static/styles.css
@@ -67,7 +67,7 @@ body {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: +100;
+    z-index: 100;
 
     font-family: roboto-condensed;
     font-size: 14px;
@@ -151,7 +151,7 @@ body img.loading {
     min-height: 30px;
     visibility: hidden;
     border: 0;
-    z-index: 10;
+    z-index: 100;
 }
 
 
@@ -197,6 +197,7 @@ body .row figure {
 body .row figure summary {
     cursor: pointer;
     font-weight: bold;
+    font-size: 1.05em;
     padding: 5px 5px 5px 0;
 }
 
