--- a/templates/app.html
+++ b/templates/app.html
@@ -171,7 +171,7 @@
                     <li>Reaction time (s) for each trial, plotted throughout the whole experiment</li>
                 </ul>
 
-                <p>CODE:</p>
+                <p><strong>Code:</strong></p>
                 <ul>
                     <li><a href="https://int-brain-lab.github.io/iblenv/notebooks_external/loading_trials_data.html">Example
                             to load trials data and plot a psychometric curve</a></li>
