--- a/templates/app.html
+++ b/templates/app.html
@@ -164,8 +164,8 @@
                 <p><strong>Bottom:</strong></p>
                 <ul>
                     <li>Psychometric curves computed in different types of trial block ; for a trial block type, the
-                        probability of the visual stimulus being on the right is either 0.5 (black), 0.2 (blue), or 0.8
-                        (orange)</li>
+                        probability of the visual stimulus being on the left is either 0.5 (black), 0.2 (orange), or 0.8
+                        (blue)</li>
                     <li>Reaction time (s) curves computed in different trial blocks (same color scheme as the
                         psychometric curve plots)</li>
                     <li>Reaction time (s) for each trial, plotted throughout the whole experiment</li>
@@ -384,15 +384,15 @@
                 <ul>
                     <li>Amplitude (uV) of good units along the probe depth (um), colored by the brain region color ; the
                         selected unit for visualization is highlighted in black</li>
+                    <li>Raster plot of the spikes of the selected good unit, with the trial block type shown (the
+                        probability of the visual stimulus being on the left is either 0.5 (black), 0.2 (orange), or 0.8
+                        (blue) and aligned to the visual stimulus onset ; averages (mean and STD) for each condition
+                        are displayed at the top with the same color scheme. Trial numbers are ascending from bottom to
+                        top, and kept in a similar order as during the experiment.</li>
                     <li>Raster plot of the spikes of the selected good unit, sorted by visual stimulus contrasts (0,
                         6.25, 12.5, 25, 100%, from pale to dark gray) and aligned to the visual stimulus onset ;
                         averages (mean and STD) for each condition are displayed at the top with the same color scheme.
                         Trial numbers within a condition are kept ascending from bottom to top.</li>
-                    <li>Raster plot of the spikes of the selected good unit, with the trial block type shown (the
-                        probability of the visual stimulus being on the left is either 0.5 (green), 0.2 (red), or 0.8
-                        (blue)) and aligned to the visual stimulus onset ; averages (mean and STD) for each condition
-                        are displayed at the top with the same color scheme. Trial numbers are ascending from bottom to
-                        top, and kept in a similar order as during the experiment.</li>
                     <li>Raster plot of the spikes of the selected good unit, sorted by visual stimulus side (right in
                         yellow, left in green) and aligned to the movement onset ; averages (mean and STD) for each
                         condition are displayed at the top with the same color scheme. Trial numbers within a condition
@@ -401,14 +401,15 @@
                         incorrect in red) and aligned to the movement onset ; averages (mean and STD) for each condition
                         are displayed at the top with the same color scheme. Trial numbers within a condition are kept
                         ascending from bottom to top.</li>
-                    <li>Template waveforms (plotted in arbitrary units (blue) and uV (black)) of the selected good unit,
-                        presented for the electrode channels where spikes were detected. The electrode channels layout
-                        over the whole probe is presented on the right.</li>
+                    <li>Template waveforms of the selected good unit, presented for the electrode channels where spikes
+                        were detected. Scale bar indicates amplitude of waveforms in uV and as a ratio to the standard
+                        deviation of the noise on the peak channel. The location of electrode channels within the whole
+                        probe is presented on the right.</li>
                 </ul>
                 <p><strong>Bottom:</strong></p>
                 <ul>
                     <li>Autocorrelogram of the selected good unit.</li>
-                    <li>Inter-spike-interval (ISI) distribution (normalized count) for the selected good unit.</li>
+                    <li>Inter-spike-interval (ISI) distribution for the selected good unit.</li>
                     <li>Amplitude (uV) of the spikes of the selected good unit across the experiment time (s).</li>
                 </ul>
             </details>
