--- a/templates/template.html
+++ b/templates/template.html
@@ -3,7 +3,19 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N7QKP5G51L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N7QKP5G51L');
+</script>
+
     <title>IBL public website</title>
 
 
