Dataset selection tab

--- a/templates/app.html
+++ b/templates/app.html
@@ -18,6 +18,7 @@
 
     // Current context.
     var CTX = {
+        dset: QUERY_PARAMS.dset || FLASK_CTX.DEFAULT_DSET, // initial tab dataset
         pid: QUERY_PARAMS.pid || FLASK_CTX.DEFAULT_PID, // initial probe UUID
         tid: parseInt(QUERY_PARAMS.tid, 10) || 0, // trial ID
         cid: parseInt(QUERY_PARAMS.cid, 10) || 0, // cluster ID
