--- a/static/styles.css
+++ b/static/styles.css
@@ -472,8 +472,8 @@ video {
 
 #share {
     position: fixed;
-    bottom: 0;
-    right: 0;
+    top: 10px;
+    right: 10px;
     margin: 10px;
     padding: 6px 10px;
     font-size: 1.2em;
