filter by good units in js

--- a/templates/app.html
+++ b/templates/app.html
@@ -26,6 +26,7 @@
         trial_onsets: [], // for all trials, including nan ones, so we can index by the tid
         trial_offsets: [],
         dur: 0, // session duration
+        qc: false // qc mode
     };
 </script>
 
