WIP: add placeholder for contributors on landing page

--- a/static/styles.css
+++ b/static/styles.css
@@ -181,6 +181,14 @@ h2 {
     background-color: #fcfcfc;
 }
 
+h3 {
+    font-size: 18pt;
+}
+
+h4 {
+    font-size: 14pt;
+}
+
 
 
 /*************************************************************************************************/
