--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 <!-- TEXT -->
 <div class="row">
     <div class="twelve columns">
-        <h3>What do we study ?</h3>
+        <h2>What do we study ?</h2>
 
         <p><strong>Adaptive behavior</strong> requires processing sensory information with focused attention, reaching
             decisions, acting, and learning from the results of those actions. These require the <strong>brain</strong>
@@ -33,7 +33,7 @@
             and across <strong>many brain regions.</strong>
         </p>
 
-        <h3>How is our study conducted ?</h3>
+        <h2>How is our study conducted ?</h2>
 
         <p>
             We conduct our study on <strong>mice</strong> trained to do a standardized <strong>task</strong>, that
@@ -71,13 +71,13 @@
 <!-- TEXT -->
 <div class="row">
     <div class="twelve columns">
-        <h3>What is our aim ?</h3>
+        <h2>What is our aim ?</h2>
 
         <p>We want to provide a dataset containing the activity of thousands single neurons in a volume spanning the
             whole hemisphere of the mouse brain.
         </p>
 
-        <h3>How much data do we have ?</h3>
+        <h2>How much data do we have ?</h2>
 
         <p>
             We recorded <strong>295501 neurons</strong>
@@ -102,7 +102,7 @@
 <!-- SCIENTIFIC FINDINGS -->
 <!-- <div class="row">
     <div class="twelve columns">
-        <h3>What are the major scientific findings ?</h3>
+        <h2>What are the major scientific findings ?</h2>
 
         <h4>Brain Wide Map</h4>
         <h4>Reproducible Electrophysiology</h4>
@@ -113,6 +113,22 @@
 
 
 
+<!-- TEXT -->
+<div class="row">
+    <div class="twelve columns">
+        <h2>Contributors</h2>
+        <h3>Data collection</h3>
+        <ul>
+            <li>XXX</li>
+        </ul>
+        <h3>Website development:</h3>
+        <ul>
+            <li>Dan Birman</li>
+            <li>Mayo Faulkner</li>
+            <li>Cyrille Rossant</li>
+        </ul>
+    </div>
+</div>
 
 
 {% endblock %}
