--- a/templates/index.html
+++ b/templates/index.html
@@ -119,13 +119,33 @@
         <h2>Contributors</h2>
         <h3>Data collection</h3>
         <ul>
-            <li>XXX</li>
+            <li><strong>Julius Benson</strong>, Center for Neural Science, New York University, New York, NY, USA</li>
+            <li><strong>Joana Catarino</strong>, Champalimaud Center for the Unknown, Lisboa, Portugal</li>
+            <li><strong>Fei Hu</strong>, Department of Molecular and Cell Biology, University of California, Berkeley,
+                CA, USA</li>
+            <li><strong>Anup Khanal</strong>, Department of Neurobiology, University of California, Los Angeles, CA, USA
+            </li>
+            <li><strong>Christopher Krasniak</strong>, Cold Spring Harbor Laboratory, Cold Spring Harbor, NY, USA</li>
+            <li><strong>Petrina Lau</strong>, Wolfson Institute of Biomedical Research, University College London,
+                London, United Kingdom</li>
+            <li><strong>Guido Meijer</strong>, Champalimaud Center for the Unknown, Lisboa, Portugal</li>
+            <li><strong>Nathaniel Miska</strong>, Sainsbury-Wellcome Centre, University College London, London, UK</li>
+            <li><strong>Jean-Paul Noel</strong>, Center for Neural Science, New York University, New York, NY, USA</li>
+            <li><strong>Noam Roth</strong>, Department of Basic Neuroscience, University of Geneva, Geneva, Switzerland
+            </li>
+            <li><strong>Karolina Socha</strong>, Institute of Opthalmology, University College London, London, United
+                Kingdom</li>
+            <li><strong>Anne Urai</strong>, Cognitive Psychology Unit, Institute of Psychology and Leiden Institute for
+                Brain and Cognition, Leiden University, Leiden, Netherlands</li>
         </ul>
-        <h3>Website development:</h3>
+        <h3>Website development, supervision</h3>
         <ul>
-            <li>Dan Birman</li>
-            <li>Mayo Faulkner</li>
-            <li>Cyrille Rossant</li>
+            <li><strong>Daniel Birman</strong>, Department of Biological Structure, University of Washington, Seattle,
+                WA, USA</li>
+            <li><strong>Gaelle Chapuis</strong>, Department of Basic Neuroscience, University of Geneva, Geneva,
+                Switzerland</li>
+            <li><strong>Mayo Faulkner</strong>, Institute of Neurology, University College London, London, UK</li>
+            <li><strong>Cyrille Rossant</strong>, Institute of Neurology, University College London, London, UK</li>
         </ul>
     </div>
 </div>
